Use the latticg api instead of the one given by kap